--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,11 +13,15 @@ bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
  
-# Resizing ----------------------------------------------------------------
+# Resizing -----------------------------------------------------------------
 bind-key C-h resize-pane -L
 bind-key C-j resize-pane -D
 bind-key C-k resize-pane -U
 bind-key C-l resize-pane -R
 
-# Vim bindings in scroll mode --------------------------------------------
+# Vim bindings in scroll mode ---------------------------------------------
 set-window-option -g mode-keys vi
+
+# Colors ------------------------------------------------------------------
+set -g status-bg red
+set -g pane-active-border-style fg=red
