--- a/.gitconfig
+++ b/.gitconfig
@@ -6,7 +6,6 @@
 	insteadOf = https://github.com/
 	insteadOf = git://github.com/
 [core]
-	hooksPath = /usr/local/dd/global_hooks
 	editor = nvim
 [include]
 	path = /Users/peter.kang/.config/gitsign/gitconfig
@@ -17,3 +16,5 @@
     com = "!git checkout $(git rev-parse --abbrev-ref origin/HEAD | cut -d'/' -f2); #"
 [safe]
 	directory = *
+[pager]
+	log = less -FX
