Update more dotfiles

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,6 +19,11 @@ bind-key C-j resize-pane -D
 bind-key C-k resize-pane -U
 bind-key C-l resize-pane -R
 
+# New pane CWD ------------------------------------------------------------
+bind c new-window -c "#{pane_current_path}"
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+
 # Vim bindings in scroll mode ---------------------------------------------
 set-window-option -g mode-keys vi
 
